@@ -1,3 +1,8 @@
+2013-10-17  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/58596
+	* g++.dg/cpp0x/lambda/lambda-nsdmi5.C: New
+
 2013-10-16  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/58633
